--- a/shared/action/行動.md
+++ b/shared/action/行動.md
@@ -273,3 +273,11 @@
 
 「行動しない人間ほど偏見や固定観念が多い。やってみればすぐ分かることも、自分では動かないので思い込みが見直されることもない。不思議な話だけど、思考の柔軟性は行動量に依存してる。」
 （佐藤航陽 https://x.com/ka2aki86/status/947388902796488704?s=12）
+
+何らかの活動の前に、まずその活動とはどういうことか、何をすればいいかを分析、計画する。
+
+行動を決めているのは心や精神の部分だけじゃなくて、技や体にも引きづられる。
+技や体が足りないとできないことがある。例えば、足を怪我していると歩きたくても歩けない。
+それに、本人だけじゃなくて、状況も影響する。貧困とか、家庭や職場での不和とか。
+
+行動の前にまず判断がある。
