--- a/shared/decision/planning/計画づくり.md
+++ b/shared/decision/planning/計画づくり.md
@@ -25,6 +25,12 @@ https://dev.classmethod.jp/articles/load-to-pm-01-gather-all-todos/
 > 2. **すべての**やることの優先度がわかっていること
 > 3. **すべての**やることの締切がわかっていること
 
+つまり、以下の三つ。
+
+- 作業内容
+- 優先順位（順序）
+- 期限
+
 計画作りは論理的な作業。
 
 計画づくりの段階でより良い計画を選ぶために、見積もりの能力が求められる。
@@ -43,3 +49,5 @@ https://dev.classmethod.jp/articles/load-to-pm-01-gather-all-todos/
 大きな目標を無計画に進めるととにかく早く進めるしかない。
 継戦能力を維持するには、小さな目標に分割して、その目標を活かしながら進める。目標を分けるだけでは足りない。
 たとえば運河を作るなら、一気に全部作るんじゃなくて、優先順位の高い地域を先に完成させて、早い段階で使い始める。建材の運搬に使う場合もある。無計画に進めると労働者の負担が大きくなって反乱される。
+
+計画作りは分析でもある。
