--- a/shared/people/knowing/人を知る.md
+++ b/shared/people/knowing/人を知る.md
@@ -1,26 +1,56 @@
 人を知るためには、
 
 - 本人を観察する
+  - 状態
+  - 反応
+  - 刺激
 - 誰かからその人の話を聞く
 
 といった方法がある。
 
-- 体験
+- 経験
 - 知識
-- 上手なこと・下手なこと
-- 好きなこと・嫌いなこと
-- 仕事
-- 経歴
-- 家族
-- 友人
-- 恋人
-- 同僚
-- 趣味
-- 興味
-- 目標
-- 大切にしていること
-- 習慣
-- 食事
+- 身体的特徴
+  - 健康状態
+  - 外見
+    - 容姿
+    - 表情
+- 精神的特徴
+  - 精神状態
+    - 精神的安定性
+  - 欲求
+    - 興味
+      - 大切にしていること
+      - こだわり
+      - 目標
+  - 行動
+    - 習慣
+      - 性格（対人習慣）
+      - 人との付き合い方
+    - 嗜好
+      - 何にお金を使うか
+      - 趣味
+      - 食事
+        - 好きなもの、嫌いなもの
+        - 食べられないもの
+- 機能的特徴
+  - 仕事
+  - 得意・上手なこと、苦手・下手なこと
+- 状況
+  - 人間関係
+    - 所属
+      - 組織
+      - コミュニティ
+    - 社会的地位
+    - 家庭・家族
+      - 親族
+      - 配偶者や子ども
+    - 職場・同僚
+    - 友人
+    - 恋人
+  - 経済状況
+- 実績
+  - 経歴
 
 第三者から知りたい人を紹介してもらうのもいいかも。
 
@@ -69,3 +99,10 @@
 
 相手のことを知るには、まず恐れずに自分の弱みを見せるといい。
 警戒心を解くところから始める。
+
+自分を知るのは、人を知るのと同じ。
+
+同じ状況に置かれていても、反応は異なる場合がある。
+
+人も結局、状態、反応、刺激の3点を観察する。
+その中で、特に人のどこを見るべきか。
