--- a/shared/people/knowing/人を知る.md
+++ b/shared/people/knowing/人を知る.md
@@ -23,22 +23,36 @@
       - 大切にしていること
       - こだわり
       - 目標
-  - 行動
-    - 習慣
-      - 性格（対人習慣）
-      - 人との付き合い方
-    - 嗜好
+  - 感覚
+    - 価値観
       - 何にお金を使うか
-      - 趣味
-      - 食事
-        - 好きなもの、嫌いなもの
-        - 食べられないもの
+    - 美的感覚
+    - 衛生観念
+  - 思想
+    - 哲学
+    - 信仰
+  - 言動
+    - 発言
+      - 口調
+      - 口癖
+    - 行動
+      - 態度
+      - 習慣
+        - 性格（対人習慣）
+        - 人との付き合い方
+      - 嗜好
+        - 趣味
+        - 食事
+          - 好きなもの、嫌いなもの
+          - 食べられないもの
 - 機能的特徴
   - 仕事
   - 得意・上手なこと、苦手・下手なこと
 - 状況
   - 人間関係
     - 所属
+      - 国籍
+      - 民族
       - 組織
       - コミュニティ
     - 社会的地位
