--- a/shared/politics/政治.md
+++ b/shared/politics/政治.md
@@ -106,3 +106,7 @@ business は交換条件、取引による政治。
 君主制や寡頭制でも国を大きく発展させるような偉人は100年に数人しかいない。そのレベルでは寡頭制にも無理がある。そもそも国レベルの規模の問題は人間の手に余る。優れてるとか劣ってるとかそういうレベルの話ではない。
 
 政治とは、契約や約束を成立させることなのかも。
+
+政治は社交の一つの側面。人が集まったらどうしても競合や対立が起きる。しかし、政治だけが社交ではない。
+
+政治では主導権を握るのが大事。
