--- a/shared/wealth/貧困.md
+++ b/shared/wealth/貧困.md
@@ -1,3 +1,11 @@
 貧困は知能を下げる。
 
 選択肢が少ないのが貧しい。
+
+金の貧乏、体の貧乏、心の貧乏、の三つがある。
+
+心が貧しいというのは、本当は選べるはずの選択肢を自分の意思で見ないようにしている状態。貧困などで知能が低下したり、そもそも知能が低かったりするとよくある。単に疲れたり緊張したりして負荷がかかっている場合にもよくある。
+
+雨乞いなどの宗教的儀式はそれ自体の効果があるわけではないが、心の貧乏を和らげる。
+重要なのは、儀式で心の貧乏を和らげた上で、現実的な解決方法を提示すること。心の貧乏を和らげないと解決方法があっても選べない。
+信仰や宗教に縋る人が劣っていて愚かだというのも確かだけど、国や組織としてその人を資源として使いたいならまずはコーチングが必要。
