--- a/shared/lifestyle/beauty/tips/美容整形.md
+++ b/shared/lifestyle/beauty/tips/美容整形.md
@@ -2,3 +2,6 @@
 
 余裕があればやってもいいと思うけど、歯科治療と同じように人工物は元々の人体よりも寿命が短い。
 手術費用だけでなく、メンテナンスコストまで考慮して実行するべき。
+
+見えないところの大きなホクロとかコブを取るくらいなら1万円くらいでできるみたい。まずは皮膚科で相談。
+そもそも急に大きくなったりすると腫瘍の場合もあるので一度診てもらうのが吉。
