--- a/shared/commerce/顧客の扱い.md
+++ b/shared/commerce/顧客の扱い.md
@@ -9,3 +9,5 @@
 就職はビジネスの形態の一種。
 従業員が会社を辞めるのは、既存の顧客（企業）を従業員側から切るのと同じ。
 会社の外にも転職先をキープしておくような付き合いを作っておけば辞めやすい。
+
+顧客とは同じ会社の同僚と同じように付き合うべき。交渉したり試したりしない。パートナーとして共同体を築く。
