--- a/shared/entertainment/examples/racing/horse/馬券を買う.md
+++ b/shared/entertainment/examples/racing/horse/馬券を買う.md
@@ -19,3 +19,12 @@
 
 馬券はネットで買わないとめっちゃ並ぶ。
 UMACAやスマッピー専用機ならわりと空いてる。
+
+同じ予想でも、買い方によってリターンが違う。
+
+例えば2頭の馬が強いと思ったら、
+単に複勝で高い方を買う、
+馬連で買う、
+三連複を何種類か買う、
+三連単を何種類か買う、
+みたいな買い方がある。組み合わせる手もある。
