--- a/shared/government/王.md
+++ b/shared/government/王.md
@@ -42,3 +42,5 @@ https://youtu.be/y0yJwfUmC-g?si=QxVNydA_1hTznSEx
 ただ、男系天皇のみとするなら、一夫一妻制に無理がある。せめて三人くらいは皇妃を持って男子を産まないといけない。
 
 女系天皇の禁止はむしろ婿入りした王配が浮気したりして変な血が混ざらないように作られた制度で、男を猿だと思ってる。
+
+民の怒りを勝って処刑されるところまでが王の役割。フランス革命が起きるまでは王の力が強くなりすぎて役割が果たされなくなってたけど、銃ができてからはだいぶ元の役割が戻ってきた。集権には責任が伴う。
