--- a/shared/people/influence/人を動かす.md
+++ b/shared/people/influence/人を動かす.md
@@ -15,3 +15,8 @@
 型にはめる、という方法論は教育や練習のための方法で、すでにある能力をうまく利用するマネジメント的な方法よりも手間がかかる。
 
 「あなたのために生きてください」
+
+女性には「他ならぬあなたが必要である」と伝える。それは組織や会社であっても。
+いや、女性というよりは、一人で自立してない人、他人に肯定してもらわないとやっていけない人、というべきか。
+
+女性には「いつもどれだけ助けられているか」「どれだけ一緒にいたいと思っているか」をうまく伝える。
