--- a/shared/singing/歌の息継ぎ.md
+++ b/shared/singing/歌の息継ぎ.md
@@ -26,3 +26,5 @@
 歌の中で息を吸うための時間が短いと、腹筋の力を完全に抜いて一気に吸うのではなく、少しだけ抜いて少しだけ吸う動きが必要。
 
 息の圧を長く維持できるようになったら、息継ぎも減らせる。必要以上に減らす必要はないけど、一息で歌い切りたいところは一息にする。
+
+息継ぎと表現としてのブレスは違う。
