--- a/shared/singing/ボーカルトレーニングの順序.md
+++ b/shared/singing/ボーカルトレーニングの順序.md
@@ -1,6 +1,9 @@
 まずは単に良い声を目指す。
 ボーカルトレーニングとしてはリズムとメロディを取れるようにする。
 
+自分という「楽器」を大きくする。
+ほとんどの人はこの部分をサボって表面的なテクニックとかリズムやメロディとかを重視している。リコーダーでどれだけすごい曲を弾いても面白いだけで感動しない。
+
 1. 息を安定させる
 2. リズムを安定させる
    1. 体でリズムをとってアクセントをつける
