--- a/apps/Google/Keep/tips/ラベルを使う.md
+++ b/apps/Google/Keep/tips/ラベルを使う.md
@@ -6,12 +6,15 @@
 - Home
 - Work
 - Shopping & Food
+- Holiday & Leisure
 
 時間管理するなら以下のラベルもあると便利。
 
 - Maybe
 - Waiting-for
 
-ナレッジを構築しているので、まだ整理してない知識は以下のラベルをつけている。
+ナレッジを構築しているので、まだ整理してない知識は以下のラベルをつけている。あとで資料にまとめる。
 
 - New-idea
+
+あとは個別の用途で分ける。「歌の練習」とか「最近の話題」とか。
