--- a/shared/health/medicine/病.md
+++ b/shared/health/medicine/病.md
@@ -9,3 +9,6 @@
 病原体は病の原因となる菌やウイルスなどの総称。アレルギー物質など一部例外もある。
 
 今でも数割死ぬ病気はある。事故による怪我が悪化した敗血症とか、身近なところにもある。
+
+がん患者は血管にがん細胞が入ると死にやすい。主に血栓やそれによる臓器不全が早期の死に繋がる。これはがんがどうこうの前に、人間の体内で特に血管がやられると体を維持できないということだと思う。
+https://youtu.be/c7sarlruz94?si=FaG2DehxyMrYsUPD
