--- a/shared/politics/violence/暴力.md
+++ b/shared/politics/violence/暴力.md
@@ -35,3 +35,6 @@
 暴力を振るう大前提として必要なのは、暴力を振るわれる覚悟を持つこと。殴られても驚かないで即座に殴り返すこと。これができないと手が遅れて弱い。
 
 暴力に暴力で返すのはもっとも誇るべき行為だ。普通、暴力というものは強者から弱者に対して振るわれるのだから。弱者が暴力を手放したら何も残らない。
+
+人の行いは須く暴力である。
+暴力を忘れ、権力に溺れることは罪である。
