--- a/shared/cooking/recipes/sweat/アイスクリームを作る.md
+++ b/shared/cooking/recipes/sweat/アイスクリームを作る.md
@@ -12,3 +12,7 @@
 3. 別のボウルで生クリームを八分立てにする
 
 https://youtube.com/watch?v=vfaL9olgd68&si=V5PmZmbVKRZv602k
+
+## メモ
+
+ボウルごと冷凍できなくもないけど、小分けにした方が便利。凍るのも早いし、取り出しやすい。ガラスでも金属でも冷たくなりすぎて触りづらいのでプラ容器が楽。
