--- a/shared/education/mentoring/指導.md
+++ b/shared/education/mentoring/指導.md
@@ -109,3 +109,9 @@ achievement と関連。
 師弟関係や先輩・後輩の関係。背中を見て育つ。
 
 指導はまず小手先のテクニックでもなんでもいいので、上達する楽しみを教える。小さな成功体験がまず必要。それから、時間のかかる矯正を始める。
+
+子どもとか発達が未熟な人に対してはまずやるべきことをいくつか教えて、特に具体的にやってはいけないことを教えて、慣れてきたら例外的にやっていいことを教える。
+
+作業の進め方を指導する。
+
+相手に作業の進め方を解説してもらって、レビューしてから進めてもらうのもいい。
