--- a/shared/logic/正しさ.md
+++ b/shared/logic/正しさ.md
@@ -37,3 +37,8 @@
 - 他人に勧めるべきか
 
 「考え続けるんだ…お前の選択が間違っていないか。その行為だけは正しいと言える事の筈だ…」『東京喰種 :re』
+
+迷いながら進むことこそが正しき道だ。目を閉じて一直線に進んでも正しいとは言えない。
+
+正しいことをしようとする時、きっと孤独が伴います。なぜなら、正しいことをしなければならないという状況は、他の多くの方々が間違えてしまっているからなのです。
+　『魔王学園の不適合者』あとがき
