--- a/shared/pain/恩を売る.md
+++ b/shared/pain/恩を売る.md
@@ -23,3 +23,5 @@
 その上で、恩を返してくれる人だけを残して、あとは切り捨てていく。
 
 頼み事の何倍も恩を売っておけば、頼み事が通りやすい。正しい投資は先行投資しかない。
+
+誰も目に留めなかった頃からのパトロンは無碍にできない。できるだけ早くから投資することで恩を感じやすい。
