--- a/shared/singing/tips/ミックスボイスは気にしない.md
+++ b/shared/singing/tips/ミックスボイスは気にしない.md
@@ -19,3 +19,5 @@
 
 声が裏返るのを誤魔化すのが上手くなるよりも前に、そもそも裏返らないように鍛えるべきではある。
 ただ、裏声を誤魔化す方が簡単なので、まずは誤魔化せるようになっておいて、練習では裏返らないようにじっくり鍛えていくのも悪くはない。裏返らないように鍛えるのは時間がかかる。
+
+ミックスボイスは練習時間が少ない人向けの小手先のテクニックなので、その練習に時間をかけるのでは元も子もない。時間をかけずに使えるからこそ意味がある。
