--- a/shared/training/練習の順序.md
+++ b/shared/training/練習の順序.md
@@ -40,3 +40,7 @@
 その中でも全て一気にはできないので、優先度を決めて、一度に練習できること以外は後回しにする。
 
 楽しさを学んだら、まずは同じことを同じように繰り返せるのが全ての基礎。アレンジや応用はその後。繰り返し使えるからこそ基礎。ただ、それだけでは飽きやすいので、応用や実践も早めに取り入れる。重要な技術は限られるけど、まずは危険の少ないものを満遍なく触ってみる。
+
+小手先のテクニックに時間をかけない。
+小手先のテクニックのいいところは、片手間でできるところだ。すぐに使い始められる。
+時間をかけるならもっと根本的なフィジカルや基礎技術に時間をかける。
