--- a/shared/life/soul/魂.md
+++ b/shared/life/soul/魂.md
@@ -1,4 +1,4 @@
-魂は単に重要なものの比喩。こだわりも近いかも。価値観。
+魂は単に重要なものの比喩。こだわりも近いかも。価値観。意志。
 
 大切なものがはっきりしてないと、魂の形もはっきりしてない。
 
@@ -41,3 +41,8 @@
 エゴ、自我、自分を特別だと思う自意識、こだわり。
 
 魂は能動的。
+
+思想や信仰は魂を形作る一部。
+
+魂はアイデンティティといってもいいかも。
+個人個人のこだわりや価値観が個を識別する。
