--- a/shared/agriculture/農業.md
+++ b/shared/agriculture/農業.md
@@ -1,7 +1,8 @@
 荒れた土地にはまず酪農が基本。土地が肥えたらようやく田畑が作れる。
+例えばモンゴルやアフリカの乾燥地帯なんかは農耕よりも酪農。
 
-生産量は米が最強。日本、中国、インド、インドネシア、など土地に比べて人が多い土地は米文化。
+三大穀物の中でも生産量は米が最強。日本、中国、インド、インドネシア、など土地に比べて人が多い土地は米文化。
 
 農業は実験するのも時間がかかるので、かなり生産量に余裕がないと実験もできない。農協のような組織や大農家が担当するしかない。それ以外の農家は巨人の肩に乗るべきではある。
 
-農は食のためにある。
+農という活動そのものはfarmingで、産業や学問はagricultureになる。
