--- a/shared/breath/training/tips/横隔膜を鍛える.md
+++ b/shared/breath/training/tips/横隔膜を鍛える.md
@@ -11,6 +11,11 @@ https://youtu.be/t9ikmatTX3w?si=o6IwfwS3eamhxzm-
 最後に息を強く吐く際に力が抜けてしまったり、息を吐き切るまで抑えきれずに力が抜けてしまったりしがち。
 途中で脇腹が押し返されなくなったら力が抜けてしまっている。
 
+## 散歩
+
+散歩は呼吸器のコントロールの練習にちょうどいい。
+喉を開いて横隔膜を下げたまま、足が着地するのと合わせて自然に息を吐く。膨らんだ風船を着地の衝撃で叩いてボンボン音を鳴らす感覚。
+
 ## その他
 
 横隔膜は下げる時に筋肉を使うので、思いっきり下げて息を吸って、そのままゆっくりと力を抜くことで鍛えられる。
