--- a/shared/logic/正しさ.md
+++ b/shared/logic/正しさ.md
@@ -40,5 +40,7 @@
 
 迷いながら進むことこそが正しき道だ。目を閉じて一直線に進んでも正しいとは言えない。
 
-正しいことをしようとする時、きっと孤独が伴います。なぜなら、正しいことをしなければならないという状況は、他の多くの方々が間違えてしまっているからなのです。
+「正しいことをしようとする時、きっと孤独が伴います。なぜなら、正しいことをしなければならないという状況は、他の多くの方々が間違えてしまっているからなのです。」
 　『魔王学園の不適合者』あとがき
+
+「アムル。俺が欲しいのは、正しい世界ではない。やり直せる世界だ」『魔王学院の不適合者』
