--- a/shared/politics/正義.md
+++ b/shared/politics/正義.md
@@ -33,3 +33,10 @@
 「いいですか、スカーレット様。人を殴る時はこういったグローブを着けて、自分が傷付かずに気持ちよく豚野郎をブン殴れるようにしなければなりません。」『最後にひとつだけお願いしてもよろしいでしょうか』
 
 「良心の痛まない拳とは、気持ちいいものだ」『凶乱令嬢ニア・リストン』
+
+悪を憎む心は、いずれ悪を求める心になる。
+
+正義とは悪だ。
+悪があるからそれを正そうとするのではなく、正義があるからそれを振るうための悪が生み出される。
+
+正しくあろうとすることは、自らの正しさを証明する悪を求めることと同じ。
