--- a/shared/war/戦うか逃げるか.md
+++ b/shared/war/戦うか逃げるか.md
@@ -3,6 +3,9 @@
 交渉が先。
 交渉に失敗すると、闘争か逃走か選ばないといけなくなる。
 
+交渉よりも武力を示すのが先。
+まず交渉の席に座るには、手を出せないのを示さないといけない。
+
 勝ち負けがある。
 
 逃げたからといって負けではない。
@@ -47,3 +50,8 @@
 逃走と闘争は、環境を変えて戦うか、環境を変えずに戦うか、という違いでもある。
 望む環境に変えられていないと、逃げるのに失敗している。
 逃げるのも言うほど容易ではない。
+
+まず、戦うのは逃げられない時だけ。戦いは無駄が多い。戦わなくていいならそれが一番。どうしても守らないといけないものや手に入れないといけないものがあれば戦うしかない。
+
+「三十六計、逃げるに如かず」
+大抵の計略よりも逃げた方がうまくいくということ。
