--- a/shared/voice/training/tips/腹から声を出す.md
+++ b/shared/voice/training/tips/腹から声を出す.md
@@ -47,3 +47,5 @@ https://youtu.be/u6esSnfp_Bk?si=MHiWE6oXoJUIPVO4
 腹から声を出しても、声帯が鍛えられてないと低い位置で受け止めきれない。常にできるだけ低い位置で音を鳴らすよう意識して練習する。
 
 しゃっくりのように声を強く高くすることができると腹から声が出てる。
+
+ドナルドの声で「クワクワクワクワ」って素早く繰り返す練習。
