--- a/shared/decision/estimating/見積もり.md
+++ b/shared/decision/estimating/見積もり.md
@@ -46,3 +46,21 @@
 重要なのは期間。チームは固定にする。工数が足りなくて人を増やすと遅れる。
 
 見積もりができないと指標としてどれくらいを設定したらいいかわからない。
+
+見積もりの目的の一つは投資判断。実際にやるかどうかを判断する。
+
+なぜ見積もりは難しいのか。
+
+- やったことがなくてわからない
+- 想定外のタスクがあるかもしれない
+- 技術の習得にどれくらい時間がかかるかわからない
+- 進行が滞ることがあるかもしれない
+- 他の人のパフォーマンスがわからない
+- など
+
+https://qiita.com/yuno_miyako/items/8678cd542fbb7050e40e
+
+見積もりには結果のばらつきがある。
+「1ヶ月で終わる」と言ったときはあくまでも「1ヶ月で終わる可能性が60%ある」と言っているにすぎない。
+
+そもそも見積もり通りに行く方が少ない。
