--- a/shared/voice/tuning/声の調子.md
+++ b/shared/voice/tuning/声の調子.md
@@ -1,3 +1,11 @@
 声の調子が悪いなら真っ先に疑うのは息の支えと喉の調子。
 喉が枯れていたらもちろん声は出にくいけど、そうでないなら息が支えられてない可能性が高い。
 息が支えられてないと喉を締めて声を出すことにもなる。
+
+なんか変に声が固くて高い時あるのなんでだろ。
+声のポジションが勝手に上がってる感じ。
+息が出てない？支えられてない？
+
+たまに横隔膜で上手く支えられてなくて息が抜けていってる感じがする。
+
+声が出ない時はまず柔らかい地声を出せるように調整し直す必要がある。
