--- a/shared/voice/tuning/声の調子を左右する要素.md
+++ b/shared/voice/tuning/声の調子を左右する要素.md
@@ -1,7 +1,10 @@
 声の調子を左右する要素:
 
-- 顔の筋肉
-- 首の筋肉
-- 声帯の緊張
-- 喉の位置
-- 鼻の詰まり
+- 顔の筋肉が硬い
+- 首の筋肉が硬い
+- 声帯が緊張している
+- 喉の位置が高い
+- 鼻が詰まっている
+- 顎の下がほぐれてない
+- 舌がほぐれてない
+- 喉が枯れている
