--- a/shared/war/tips/恐怖を与える.md
+++ b/shared/war/tips/恐怖を与える.md
@@ -19,3 +19,7 @@
 恐怖を与えることは、相手の行動を抑止することにつながる。
 
 第三者の力を借りて敵を倒しても、恐怖を与えられない。
+
+国に恐怖を与えるには、ある程度の人数を語り部として生かさないといけない。情報が拡散されてこそ国単位の恐怖になる。
+
+恐怖を与えるには、結果だけを見せるよりも過程までしっかり見せるのが効果的。
