--- a/shared/story/telling/tips/物語を評価する.md
+++ b/shared/story/telling/tips/物語を評価する.md
@@ -2,31 +2,48 @@
   - テーマ
   - コンセプト
   - カタルシス
+- 主観的な視点
+  - 語り手の立場
+  - 語り手の持つ情報の差
+  - 感覚
+  - 想像
+  - 認知の歪み
+    - せん妄
 - 客観的な歴史、何が描かれているか
   - 舞台
     - 世界
     - 時代
     - 場所
+      - 地理的条件
     - 登場人物
   - 経緯
   - 結末
     - 喜劇
     - 悲劇
-- 表現の技術、どうやって描かれているか
+- 描写、どうやって描かれているか
   - 媒体
     - 漫画
     - 文章
     - 動画
-  - 語り手の視点
   - 修辞
   - 展開・順序
+    - 導入
+    - 結論
+    - テンポや緩急
+  - 矛盾
 - 歴史的背景
   - いつ書かれたか
   - どこで書かれたか
   - 誰が書いたか
+  - 新規性や独創性
 
 物語そのものと表現を分けるか、全体で見るか。
 
 シリーズものの場合、全体と各巻、各部で違う場合もある。
 
 同じ物語を同じ順序で描いても、作者の意図や技術で違うものになる。
+
+タイムリープやマルチエンディングの場合は結末や経緯が複数ある場合もある。
+
+作者の意図するカタルシスと読者の見たいカタルシスが違う。
+元々はギャグだったけどシリアス展開がウケるとかもよくある。
