--- a/shared/story/telling/物語の表現方法.md
+++ b/shared/story/telling/物語の表現方法.md
@@ -2,8 +2,20 @@
 
 代表的なものは以下の通り。
 
-- 小説
+- 文章
+  - 小説
+  - 詩歌
+- 楽曲
 - 漫画
-- 動画（実写、アニメーション）
-- 詩歌
+- 動画
+  - 実写、アニメーション
 - 絵画
+- ゲーム
+
+物語に合った表現方法を選ぶ。
+
+漫画やアニメは小説よりも視覚情報が多くて、アクションなんかは特に得意。
+
+楽曲や動画はわりと受動的に聴けるけど、文章や漫画は能動的に読もうとしないと読めない。
+
+ゲームはマルチエンディングで歴史が複数ある場合もある。
