--- a/shared/music/音楽.md
+++ b/shared/music/音楽.md
@@ -60,3 +60,5 @@ https://youtu.be/69b0XDX6Mi0?si=SWd-QIton1VpDiHd
 耳が聴こえてなくても音楽はある。
 
 音楽の核は、レガートや進行感と呼ばれるもの。何かが続いていく、進んでいく感じ。
+
+音楽の習得はハーモニー、リズム、メロディ、の順。
