--- a/shared/singing/ボーカルトレーニング.md
+++ b/shared/singing/ボーカルトレーニング.md
@@ -176,3 +176,5 @@ https://youtu.be/L1SH1cRTOuM?si=bL92URDh81zOJCyM
 - 声帯を伸縮させた高くても柔らかい声
 - 声帯を下げた喉の奥によく響く声
 - 声帯に力を入れずに息の強さで閉じる
+
+練習の順序は強い息からでいいけど、歌う時の意識としては息の支えが先で、強い息はその後。
