--- a/shared/story/telling/物語の表現方法.md
+++ b/shared/story/telling/物語の表現方法.md
@@ -5,12 +5,17 @@
 - 文章
   - 小説
   - 詩歌
+- 劇
+  - 台詞
+  - 振り付け
 - 楽曲
 - 漫画
-- 動画
-  - 実写、アニメーション
+- 動画・映画
+  - 実写
+  - アニメ
 - 絵画
 - ゲーム
+- ダンス
 
 物語に合った表現方法を選ぶ。
 
