--- a/shared/breath/styles/腹式呼吸.md
+++ b/shared/breath/styles/腹式呼吸.md
@@ -102,3 +102,5 @@ https://youtu.be/urYFKIJnPqA?si=sjjgC3gUcB1jo4ya
 胸を張っていると横隔膜の力を抜ききれない。横隔膜が一番脱力するのは胸式呼吸で肋骨を絞って吐き切る時。
 
 腹式呼吸は結果として腹が膨らむけど、あえて膨らませるのとは違う。力を入れて膨らませようとするよりは、膨らむ余地が残るように柔らかくしないといけない。
+
+腹式呼吸でも横隔膜の力を一気に抜くかどうかでグラデーションがある。
