--- a/shared/business/自営業.md
+++ b/shared/business/自営業.md
@@ -1,1 +1,4 @@
 自営業でも基本収入があると強い。準委任の業務委託とか。起業するとしてもまずは週2-3で50万円稼ぐところから始めると、起業が失敗してもなんとかなる。
+
+仕事には報酬があるけど、仕事を探す時間には報酬がない。
+独立して起業したり自営業したりするなら、仕事を探す時間や仲介料をできるだけ減らさないといけない。
