--- a/shared/story/telling/tips/物語を評価する.md
+++ b/shared/story/telling/tips/物語を評価する.md
@@ -47,3 +47,7 @@
 
 作者の意図するカタルシスと読者の見たいカタルシスが違う。
 元々はギャグだったけどシリアス展開がウケるとかもよくある。
+
+スピンオフは原作に対してどういう立ち位置の作品なのかも重要。
+
+物語を読むときはその物語のカタルシスがどこか、が一番重要。どこが一番気持ちいいか。何が描きたいか、でもある。そこが合わないと刺さらない。
