--- a/shared/story/telling/物語の表現方法.md
+++ b/shared/story/telling/物語の表現方法.md
@@ -24,3 +24,6 @@
 楽曲や動画はわりと受動的に聴けるけど、文章や漫画は能動的に読もうとしないと読めない。
 
 ゲームはマルチエンディングで歴史が複数ある場合もある。
+
+漫画の場合、物語としてだけじゃなくて絵として描きたいものも反映される。
+可愛いヒロインであったり、セクシーなお姉さんであったり、筋肉であったりする。
