--- a/shared/breath/息の支え.md
+++ b/shared/breath/息の支え.md
@@ -25,3 +25,6 @@
 横隔膜を下げた腹式呼吸は外側の腹筋でなく内側の腹筋を使う。腹よりは背中から斜め上に押し上げる感覚。
 
 横隔膜で息の圧をかけずに歌う場合、腹筋で息を送った時だけ声が出てぶつ切りにならないとおかしい。ぶつ切りになってないなら喉で変に息を制御してしまっている。
+
+息を支えるとある程度息が強くしないと声が出ない。
+普通に腹式呼吸で息を支えると単純に出ていく息の量が減るので、息の量だけで発声していると声にならない。
