--- a/shared/breath/息の支え.md
+++ b/shared/breath/息の支え.md
@@ -11,20 +11,10 @@
 
 息を吐きすぎると吸う時に胸式呼吸になりやすい。
 
-やっぱり喉を楽にして、腹からの息でsのロングトーンを安定させるのが先決か。息が安定した指標の一つになる。
+やっぱり喉を楽にして、腹からの息で"s"のロングトーンを安定させるのが先決か。息が安定した指標の一つになる。
 
 息を強く吐き切った後で力を抜いた時に、息が入ってくるようなら支えられてない。息が出ていくようなら支えられている。
 
 強く息を吐き切った後に肺に十分な量の空気が残ってないといけない。息の支え。
 
-息の支えが強固になるほど声は自由になる。
-
-息の強さというかテンポは一定で、量は減らす。細く強い息でまず練習する。ただ、ある程度を超えると量を抑えるのも難しくなる。
-強さ自体は、アクセントのところで少し強くなる。でも量は一定。
-
 横隔膜を下げた腹式呼吸は外側の腹筋でなく内側の腹筋を使う。腹よりは背中から斜め上に押し上げる感覚。
-
-横隔膜で息の圧をかけずに歌う場合、腹筋で息を送った時だけ声が出てぶつ切りにならないとおかしい。ぶつ切りになってないなら喉で変に息を制御してしまっている。
-
-息を支えるとある程度息が強くしないと声が出ない。
-普通に腹式呼吸で息を支えると単純に出ていく息の量が減るので、息の量だけで発声していると声にならない。
