--- a/shared/voice/training/ボイストレーニングの方針.md
+++ b/shared/voice/training/ボイストレーニングの方針.md
@@ -60,3 +60,8 @@ https://youtu.be/ZdlqRMIBaAs?si=7uWQCX0GAzQv-Zc2
 代わりに呼吸の練習であったり、リズムやメロディなど音楽そのものの勉強であったり、できることはある。
 
 喉を開いたり、腹から声を出したりする基礎の練習はまず最低音から始める。そうでないと喉が締まる。
+
+- 声の支えを安定させる
+- 声のテンションを一定に保つ
+- 声のポジションを低く保つ
+- 喉を開く
