--- a/shared/voice/声の支え.md
+++ b/shared/voice/声の支え.md
@@ -77,3 +77,13 @@ https://youtu.be/t9ikmatTX3w?si=o6IwfwS3eamhxzm-
 長く息の支えを維持できないと、長いフレーズを発声できない。
 
 息を支える場合は長い息というよりも強くて短い息を繋いで長く出す感じ。
+
+息の支えが強固になるほど声は自由になる。
+
+息の強さというかテンポは一定で、量は減らす。細く強い息でまず練習する。ただ、ある程度を超えると量を抑えるのも難しくなる。
+強さ自体は、アクセントのところで少し強くなる。でも量は一定。
+
+横隔膜で息の圧をかけずに歌う場合、腹筋で息を送った時だけ声が出てぶつ切りにならないとおかしい。ぶつ切りになってないなら喉で変に息を制御してしまっている。
+
+息を支えるとある程度息が強くしないと声が出ない。
+普通に腹式呼吸で息を支えると単純に出ていく息の量が減るので、息の量だけで発声していると声にならない。
