--- a/shared/health/exercise/tips/体を鍛える.md
+++ b/shared/health/exercise/tips/体を鍛える.md
@@ -21,3 +21,5 @@ https://x.com/tachu_muscle/status/1829623923346194473
 
 体を鍛えたかったら、筋トレを日常にする。
 例えば、寝転がるより立った方が筋トレになるし、歩くときも横隔膜を下げたり腹筋を引き上げたり胸を張ったりした方が筋トレになる。
+
+脳や体は使えば使うほどパフォーマンスが上がる。でも栄養や睡眠が足りてないとむしろ劣化することもある。
