--- a/shared/mood/態度が悪い人を排除する.md
+++ b/shared/mood/態度が悪い人を排除する.md
@@ -6,3 +6,6 @@
 機嫌の悪い人とか泣いた人に優しくすると悪い方向に学習してしまうので、環境のためには厳しく対処するのが望ましい。態度に出さないように圧をかける。ただ、誰かが悪かったら悪い人に圧をかけるべき。
 
 空気が悪いのを常態にしてはいけない。それならもう空気を悪くしている人と殴り合って解決した方がいい。
+
+大勢いるところでやたら携帯を触ったりしてつまらなそうにしてる人は雰囲気悪くなるし、雰囲気悪くなったのを他人のせいにするタイプだから関わるべきではない。
+そもそも態度が悪い人は、空気を悪くする人。積極的に排除する。
