--- a/shared/trick/tips/詐欺を見分ける.md
+++ b/shared/trick/tips/詐欺を見分ける.md
@@ -11,3 +11,5 @@ https://youtube.com/watch?v=pKU7FuNnFe4&si=lpU6n3WFAkNLrVuR
 その中でも起業するタイプは最終的に粉飾決算で落ちぶれがち。
 
 「なぜXXXなのか」という疑問は、まず「そもそもXXXなのか」という疑問を持たないといけない。バカが騙される。
+
+項目が多すぎるアンケートは、一位にしたい項目以外を細分化することで順位を操作されていると思っていい。
