--- a/shared/society/品性.md
+++ b/shared/society/品性.md
@@ -20,3 +20,5 @@
 品性があるとそれだけで一目置かれる。ただ、品性があっても知性がないとすぐ化けの皮が剥がれる。
 
 「ルールを守る、マナーを守る、そんな当たり前のことをするだけだ。自分たちの遊び場を自分たちで荒らして使いづらくするなんて馬鹿みたいじゃないか。」『ふたりソロキャンプ』
+
+品性は美学とも繋がる部分。
