--- a/shared/society/品性.md
+++ b/shared/society/品性.md
@@ -22,3 +22,10 @@
 「ルールを守る、マナーを守る、そんな当たり前のことをするだけだ。自分たちの遊び場を自分たちで荒らして使いづらくするなんて馬鹿みたいじゃないか。」『ふたりソロキャンプ』
 
 品性は美学とも繋がる部分。
+
+判断力が低下していると品がなくなりやすい。
+
+- テンションが高い
+- 酔っている
+- 疲れている
+- 話し続けている
