--- a/shared/communication/media/language/languages/japanese/異体字.md
+++ b/shared/communication/media/language/languages/japanese/異体字.md
@@ -6,3 +6,6 @@
 
 カタカナの異体字は平安時代頃には統一された。
 当時はカタカナの方がよく使う実用的な文字だったので優先されたと思われる。
+
+漢字の中には、元々違う意味だったのに別の漢字と統合されて今では使われなくなった意味もある。
+たとえば「芸」は「藝」の新字体だけど、「芸」も元々は「防虫効果のある草」を指す漢字として意味があった。ちなみに現代中国でも「藝」には簡体字が当てられているが、草冠に「乙」となっている。
