--- a/shared/dance/基本ステップ.md
+++ b/shared/dance/基本ステップ.md
@@ -2,3 +2,12 @@
 
 - https://youtu.be/WE76s6c1GGI?si=0XBkJSCY9WEBcnLK
 - https://youtu.be/97adPgS5tjI?si=c9KtUkwrpBHkE6Tb
+
+ダンスにおけるステップの移動は、左右移動、前後移動、周回、ターンに大別できそう。
+チャールストンは前後移動、ボックスは周回。
+
+移動とは別に足の運用でまた違う。手の振りもいろいろあるけど、まずは足の運用。
+
+手の振りは足に合わせて上下とか前後とか左右とかに振るだけでもまずはなんとかなる。あと重心移動の補助にもなるし。
+
+足下にテープで着地の印をつけて練習するのもあり。
