--- a/shared/peace/恨み.md
+++ b/shared/peace/恨み.md
@@ -1,1 +1,11 @@
-恨みがある状態は平和とは言えない。
+# Hate
+
+憎しみ。
+
+好き嫌いというよりは、相手を殺そう、害そうとする感情。
+
+恨みがある状態は平和とは言えない。いずれ争いになる。
+
+「戦うのは個人的な怒りや憎しみじゃねえよな？」
+「怪獣の力は、誰かを殺すためにあるんじゃねえ…。人間全員を殺すためにあるんだ」
+『スパロボY』オニジャ
