--- a/shared/politics/争い.md
+++ b/shared/politics/争い.md
@@ -76,3 +76,6 @@ https://twitter.com/5ducks5/status/1504980931223818244
 
 競争の先には戦争しかない。
 ルールに則った競争に勝てない人から、ルールを外れた戦争を始めるだけ。
+
+恨みがなくても争いにはなる。
+特に、一つしかないものを取り合うだけで争いになる。
