--- a/shared/story/telling/物語の展開.md
+++ b/shared/story/telling/物語の展開.md
@@ -5,3 +5,5 @@
 
 ある魔法の話で、クレバーで身代わり魔法持ちのキャラが死んだと見せかけて生きていたのはさすがに読めた。
 死んだと見せかける展開は他のキャラに助けられてたとか、本人によらない要因で生きている方が気づきにくい。
+
+創作だと色んな解釈ができるような引きにして、答えはわからない場合もある。考察の余地を残す。
