--- a/shared/thinking/新しいアイデアを考える.md
+++ b/shared/thinking/新しいアイデアを考える.md
@@ -28,3 +28,6 @@
 その上で、オリジナルに昇華できるのは一握りの才能。
 
 アイデアを考える時はお互いに独立した複数の意見をまず集めるのが大事。いきなり会議を始めてはいけない。まずアイデアをそれぞれ出した上で、持ち寄って選別する。持ち寄ってそれぞれ確認した段階で新しいアイデアが出ることもあるが、それもまずは独立したアイデアがあってこそ。
+
+アイデアを出す時間と、アイデアを絞る時間を分離する。
+まずは雑多にピンからキリまで全部出しておいて、それから絞る。いきなり絞ると思考が制限される。
