--- a/shared/science/反証可能性.md
+++ b/shared/science/反証可能性.md
@@ -8,3 +8,5 @@
 「どうやって検証したのか？」という問いは科学的かどうか、相手が専門家かどうか見極めるのに役立つ。
 本当に専門家なら検証方法まで詳細に語れるし、「誰かから聞いただけ」なら無視していい。
 でも話題自体が興味深いならその人は無視して自分で調べてもいい。
+
+科学は再現性というよりも反証可能性が先。反証可能性のためには再現性が必要。
