--- a/shared/health/medicine/tips/薬を飲む.md
+++ b/shared/health/medicine/tips/薬を飲む.md
@@ -1,2 +1,5 @@
 二列で並んでいる錠剤が一錠ずつ飲むタイプなら、互い違いに開けていくと何錠飲めばいいか一目でわかる。
 https://x.com/22tyoki22/status/1970635421911748834?s=61
+
+粉薬は舌の上に載せるとむせやすい。
+舌の裏に置いて、水で少しずつ溶かしながら飲むと飲みやすい。
