--- a/shared/health/exercise/examples/マッサージ.md
+++ b/shared/health/exercise/examples/マッサージ.md
@@ -1,3 +1,5 @@
 迷走神経のマッサージ
 リラックスしたり、喉の不快感を解消したりする効果がある。
 https://youtu.be/ybkoKQnmOSo?si=6tXOSN36PpS-KDhP
+
+体の表面にある血管は静脈なので、マッサージは基本的に心臓に向かって血液を押すように揉むのが基本。力はそんなに要らない。
