--- a/shared/human/history/人類史.md
+++ b/shared/human/history/人類史.md
@@ -1,3 +1,26 @@
+- 世界の歴史
+- 地域の歴史
+  - 島ごと
+  - 国ごと
+- 民族の歴史
+  - ギリシア族
+  - ゲルマン族
+  - トルコ族
+  - ペルシア族
+  - モンゴル族
+  - スラブ族
+  - アーリア族
+  - 漢族
+  - 金族
+- 宗教の歴史
+  - キリスト教
+  - イスラム教
+  - 仏教
+- 時代の歴史
+  - 古代
+  - 近代
+  - 現代
+
 現在の中国共産党政府が始まったのは1949年で、第二次大戦を戦ったのは国民党。
 
 歴史で重要なのは前後関係と区切り、それぞれがどう影響し合っているか。
