--- a/shared/action/意味.md
+++ b/shared/action/意味.md
@@ -59,3 +59,6 @@
 会社のために働くことそのものに意味があると思われていない。会社や上司、同僚に価値を認めていない。信頼関係がないからコミュニケーションコストが増える。
 
 意味がないのと、意味がわからないのは分けて考えないといけない。意味がわからないのは自分の考えが足りないだけ。
+
+人の行いには意味がなくても意図がある。
+「意味がない」と思っても、意図を否定してはいけない。
