--- a/shared/communication/media/language/learning/言語を覚える.md
+++ b/shared/communication/media/language/learning/言語を覚える.md
@@ -6,3 +6,5 @@
 外国語と母国語の違いをよく知ることで外国語を知る。
 
 言語の習得はまず知っていることに集中して、わからないことがあれば後で調べられるようにメモするか、相手がいるなら教えてもらってもいい。
+
+外国語は母語に訳さずに理解した方がいい。ベースの意味は覚えるけど、訳さない。
