--- a/shared/life/死.md
+++ b/shared/life/死.md
@@ -41,3 +41,5 @@ https://x.com/badassceo/status/1111934061788852224
 死を恐れて逃げるばかりではダメ。抗う。逃げないけど、死なないようにする。死はどうせどこかで来るので恐れない。
 
 もし死後も体に意識が残り続けるのであれば、綺麗なうちにさっさと焼いてやるのが情というものだ。
+
+「死は何もかも台無しにする代わりに生を価値あるものにする。そう悪いものでもない。」『宝石の国』
