--- a/shared/philosophy/history/西洋哲学史.md
+++ b/shared/philosophy/history/西洋哲学史.md
@@ -1,3 +1,19 @@
+## 概略
+
+西洋哲学でまず重要な3人を選ぶなら、以下の三人。
+
+1. プラトン（ソクラテス）: 哲学の祖
+2. カント: 解釈の発見
+3. ニーチェ: 最後の哲学者
+
+プラトンは無知の知、あるいはイデア。洞窟の比喩。いろんな具象を包括する抽象、あるいは集合意識の概念。考えること、学問の始まり。
+
+カントは現象ともの自体。「解釈」の発見。イデアも認識を介したものでしかない。釈迦から2000年遅れてようやく「解釈」が発見された。物自体は信じるしかない。
+
+ニーチェは神や真理、物自体の価値の否定。善悪を生み出す「ルサンチマン」の発見。勝ち目のない強者を悪として、弱者が自己を肯定するための感覚が善。真理を追い求める哲学の終わり。最後の哲学者。力への意志。
+
+## その他
+
 西洋哲学史の大きな転換点はやはりカントとニーチェ。ソクラテス、プラトン、アリストテレスからカント、ニーチェまでの2000年近くは西洋哲学が全然発展してない。
 
 現代哲学と呼ばれるのが実存主義、構造主義、ポスト構造主義の三つ。
