--- a/shared/physics/物理.md
+++ b/shared/physics/物理.md
@@ -3,3 +3,6 @@
 音、光（色や輪郭）、形（触感）、味、匂い、などは物理的な部分と、精神的な部分（認知、知覚）がある。
 
 物理学って量子論とか一部検証されてないものもあるけど、どこまで検証されてるのかな？
+
+遠くを見ることは、過去を見ることと同じ。
+https://youtu.be/bbrW0oE_pwo?si=_1UvXLPQiX1NKpiR
