--- a/shared/people/tips/ルサンチマン.md
+++ b/shared/people/tips/ルサンチマン.md
@@ -2,3 +2,5 @@
 
 参政党やオウム心理教のようなカルト、陰謀論はルサンチマンを狙い撃ちにする。
 「誰も気づいていない真実に特別な自分」を簡単に手に入れられて、価値がない人でも仲間たちに自分を肯定してもらえる。価値のない人が増えるほど強い。
+
+ルサンチマンは弱者が結集して強者を狩るために役立つ。
