--- a/shared/voice/training/exercises/ハミング.md
+++ b/shared/voice/training/exercises/ハミング.md
@@ -1,3 +1,15 @@
+## 注意
+
+ハミングは独学だと良し悪しを判別するのが難しい。
+正しく練習できなくて、むしろ変な癖になることもあるので避けた方がいい。
+
+## 感覚を掴む
+
+基本は相槌の感覚。口を閉じて「うんうん」の感覚。
+まずは出しやすい高さから始める。
+
+## その他
+
 ハミングは鼻歌と違って声帯で音を鳴らして鼻に通す。
 鼻歌は鼻で鳴らす。
 
@@ -33,3 +45,6 @@
 ハミングは基本的に裏声の練習なので、地声の練習とは別に行う。
 
 鼻歌は息の圧が低くても楽に出したい。無理に声帯に力を入れずに細い声でいい。
+
+ハミングは鼻に息を通すので、鼻腔共鳴とは違う。
+鼻腔共鳴は鼻に息を通さない。音だけが鼻を通る。
