--- a/shared/voice/training/issues/喉が締まる.md
+++ b/shared/voice/training/issues/喉が締まる.md
@@ -30,3 +30,9 @@ https://youtu.be/HibuKCqBJzs?si=2mzDCIyyuIc7i31m
 喉で絞るような呼吸で歌ってしまうと、強い息を使うのに「溜め」が必要になる。
 
 喉声にも、声帯に力が入ったものと、気道を絞って息を強くしているものがある。
+
+気道が狭いのはむしろ首に力が入ってないからかも。
+声を出す時は首を外側に広げて、気道を確保しないといけない。
+
+顎を引くと気道が狭くなってしまう。
+顎は少し上げて、顎関節も下に引くよりは前に出す感覚で開く。
