--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -274,3 +274,16 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 そのまま、声を出すというよりは、声帯を閉じるだけ。
 
 まず強くて細い息を送る。声はそれに乗せるだけ。喉は開いて、無理に息を強くしない。息が弱かったらそれに合った高さまでしか出さない。喉で息を絞って高い声を出すのは悪い癖。
+
+1. 背を伸ばす
+2. 顎の力を抜いて口を開ける
+3. 横隔膜を下げて、腹筋で息を吐く
+4. 声帯を閉じる
+5. 腹筋で声帯に圧をかける
+6. 声帯を適度に開いて息を通す（地声を出す）
+7. 声帯を戻して声を止める
+8. 息の量を減らす
+9. 声の雑音を減らす、余計な力を抜く
+10. 声を柔らかくする、喉を下げる
+11. 声を安定させる（息を安定させる）
+12. 顎を動かさずに発音を変える
