--- a/shared/voice/training/ボイストレーニングの方針.md
+++ b/shared/voice/training/ボイストレーニングの方針.md
@@ -17,6 +17,11 @@ https://youtu.be/ZdlqRMIBaAs?si=7uWQCX0GAzQv-Zc2
 
 声道が狭いと声量が小さくなるし、声質もこもった感じになる。
 
+- まずは癖を抜いて、雑音を減らす
+- 地声でも柔らかくなるように響きを強くする
+- 息を長く強く使えるようにする
+- 響きを変えずに音程や発音を変えられるようにする
+
 - 喉を締めない
 - 滑舌をよくする
 - 雑音を減らす
