--- a/shared/voice/声のテンション.md
+++ b/shared/voice/声のテンション.md
@@ -16,3 +16,8 @@ https://youtu.be/MfYo2SQlaUk?si=mE-o_WCY1JFrisP0
 声帯のテンションというのは、声帯の伸びというよりも緩みがないこと。
 
 米津玄師の地球儀は声帯のテンションが弱いまま息の強さで抑揚をコントロールするイメージ。
+
+声のテンションが高いとピッチも上がる。
+
+声のキーとテンションは近い。
+テンションを上げると全体のピッチも上がって、つまりキーが上がる。
