--- a/shared/voice/training/issues/唇や舌が痺れる.md
+++ b/shared/voice/training/issues/唇や舌が痺れる.md
@@ -1,3 +1,5 @@
+余計な場所が振動している。
+
 歌った時に口の中や鼻の中が痺れるような感覚があると変な振動がでている可能性もある。
 
 特に舌や鼻が痺れるような場合は変に声の通り道を塞いでしまっている場合もあるので、舌根を下げないようにしたり、鼻にかかりすぎないようにしたりするといい。
