--- a/shared/voice/training/ボイストレーニングの方針.md
+++ b/shared/voice/training/ボイストレーニングの方針.md
@@ -1,3 +1,15 @@
+## 絶対に避けるべき
+
+- 声が枯れる
+
+## できれば避けた方がいい
+
+- 息が切れる
+- 声が硬い
+- 滑舌が悪い
+
+## その他
+
 声を安定させるのがまずは第一歩。表現は強調なので、まず単調ができないと強調できない。
 単調で雑音のない声を、大きな声でも小さな声でもロングトーンでも高音でもなんでも出せるようにする。
 どこでも単調な声が出せるなら、それを組み合わせることで協調もできる。
