--- a/shared/breath/training/tips/息を強くする.md
+++ b/shared/breath/training/tips/息を強くする.md
@@ -1,3 +1,6 @@
+横隔膜を下げて、下腹部を内側に巻き込む感覚で力を入れる。
+うまく行くと息がいきなり出るというよりは声帯に力がかかる感覚がある。
+
 吐く息の圧を高める。
 
 手をグーに握って、口に当てて、圧をかけないと出て行かないようにして強く息を吐くと感覚を掴みやすい。
@@ -254,3 +257,5 @@ https://youtube.com/shorts/nwktMJI_rU8?si=XAGRbGhLYMHG6sJU
 体の中に空気を多く取り込んで、肋間筋や腹筋、背筋で外から内に圧をかける。
 
 息を強くしても太くしない。細くするというよりは、太くならないように抑える。太い息は息漏れに繋がるし、喉を痛める。
+
+お腹に力を入れても外側の腹筋ばかりに力が入っていると声帯にうまく圧がかからない。
