--- a/shared/commerce/商業.md
+++ b/shared/commerce/商業.md
@@ -96,3 +96,6 @@ https://x.com/BuzzLogicCEO/status/1813015524546342978
 ただし、目先の利益だけでなく、何年も先の利益を見ないといけない。違法な取引で捕まったり、恨みを買って殺されたりするのを利とは言えない。
 
 自分で持ちきれないくらい仕事が来ると、下請けに回したりして仕事を紹介するのも仕事になる。卸業みたいなもの。
+
+商売の基本はリピーターを増やすこと。新しい顧客を見つけるコストは高い。同じ顧客と何度も取引した方が儲かる。
+新規顧客を雑に増やしてもリピーターにならないと一時的な収入にしかならない。新規顧客を増やすなら、同時にそれをリピーターに変える方策も必要。
