--- a/shared/government/tips/奴隷制度.md
+++ b/shared/government/tips/奴隷制度.md
@@ -1,3 +1,7 @@
 結局、無制限の奴隷制度は争いの種にしかならない。懲役のように大義名分が必要。大義名分のない奴隷はいつ同情で一般大衆が敵に回るかわからない。
 
 そもそも扱いが違う人がある程度の絶対数を超えると独立しがち。人と奪い取った土地があれば国はできる。武力に差があっても絶対数が多くなると簡単には潰せない。守りの方が強いし、そもそも労働力に独立された時点で皆殺しにしても損害しかないし。
+
+奴隷などの下層階級には、人権とか以前に、疫病や反乱の問題がある。
+死にやすい貧民ほど増えやすいし、病気にかかりやすいし、伝染したり反乱したりすると規模が大きくなって止められない。かといって増えるのを止めると死にやすいので維持できない。
+人類の歴史の中で奴隷を維持できていたのはたった2000年くらいしかない。
