--- a/shared/people/knowing/人を見る.md
+++ b/shared/people/knowing/人を見る.md
@@ -1,4 +1,4 @@
-人の変化
+人の状態や、人の変化、反応を観察する。
 
 次に会ったときに大きな変化があったら、何か大きな影響を受けたと考えられる。
 
@@ -83,3 +83,5 @@
 人と会ったらどこを見るべきか。
 顔、髪、服や靴、持ち物、話したこと、とか。
 全体のイメージとして何を見るべきか。おしゃれをしていたら会うのを楽しみにしてくれてるかも、とか。
+
+人の反応を観察するためにどんな刺激を与えるべきか。
