--- a/shared/voice/training/issues/喉が締まる.md
+++ b/shared/voice/training/issues/喉が締まる.md
@@ -36,3 +36,9 @@ https://youtu.be/HibuKCqBJzs?si=2mzDCIyyuIc7i31m
 
 顎を引くと気道が狭くなってしまう。
 顎は少し上げて、顎関節も下に引くよりは前に出す感覚で開く。
+
+喉が締まるのはまず息に声が乗ってないから。まず息だけで声帯に十分な圧をかける。圧が足りないと喉を締めて圧をかけないといけなくなる。
+
+まずは息に声を載せるのが優先。息の支えの範囲内でだけ声を出して、胸に残すべき息まで使い切らない。必要なら細かくブレスを入れる。
+
+息が先、声が後にしないといけない。喉で息を絞らない。腹からの息でしっかり声を出す。
