--- a/shared/observation/観察.md
+++ b/shared/observation/観察.md
@@ -237,3 +237,8 @@ inspection は明確な目的というか基準がある。
 特に、技術だったら上手い人を観察する。
 
 何かを観察するためには、どこを見ればいいか知っておかないと十分な情報を得られない。
+
+反応を観察するためにどのような刺激を与えるべきか。
+
+観察の対象は、特に反応。
+どのような刺激にどう反応するか。
