--- a/shared/achievement/進捗.md
+++ b/shared/achievement/進捗.md
@@ -19,5 +19,7 @@ success の途中が progress になる。
 
 仕事の進行自体は仕事だけど、終わるまでの進捗という意味では achievement の文脈。
 
+「百里をゆくものは九十里を半ばとす」（日本のことわざ）
+
 進捗90%は50%だ。
 9割終わったと思ったところから、それまでと同じだけの時間がかかると考えるべき。
