--- a/shared/learning/学習.md
+++ b/shared/learning/学習.md
@@ -319,3 +319,5 @@ OODA ループが学習の基本。
 「まるで気ままな寄り道のような、道無き道を行くような、ガラクタの山から宝を見つけ出すような」（『対ありでした。』）
 
 学習の目的は、成功すること。
+
+現状分析、情勢の観察が最も重要な能力。情勢が理解できてこそ情報が役にたつ。主観や感情を排して、正しく情報を使う。
