--- a/shared/politics/正義.md
+++ b/shared/politics/正義.md
@@ -40,3 +40,7 @@
 悪があるからそれを正そうとするのではなく、正義があるからそれを振るうための悪が生み出される。
 
 正しくあろうとすることは、自らの正しさを証明する悪を求めることと同じ。
+
+正義と信仰には近いものがある。
+
+正義や信念を持って自分を肯定する人は、正しいかどうかはともかく強い。
