--- a/shared/choice/value/価値.md
+++ b/shared/choice/value/価値.md
@@ -269,3 +269,9 @@ Not for you.
 
 価値がない人はわざわざ殺す価値もない。
 害があるなら殺せる時に殺しておいた方がいい。
+
+実績と期待が価値を決める。
+正しく判断されるとは限らない。そもそも知られていないと需要もないし。
+
+- 実績: 過去の需要と供給
+- 期待: 将来の需要と供給
