--- a/shared/voice/声のポジション.md
+++ b/shared/voice/声のポジション.md
@@ -4,3 +4,5 @@
 声色を変える時は声のポジションを変えたり、声帯を開いたり、逆に強く閉めたり、仮声帯を鳴らしたりする。
 
 音の鳴っている位置、声のポジションを感じ取れるようにする。
+
+声のポジションが高い日は逆に余計な力が入りすぎてるかも。まずは息の声を載せる。声が先行しない。あと首に力を入れて気道を広げるのも大事。
