--- a/shared/cooking/tips/余った食材を使う.md
+++ b/shared/cooking/tips/余った食材を使う.md
@@ -1,14 +1,22 @@
 ## 卵
 
-| 料理       | 個数 | 調理時間 (分) |
-| ---------- | ---- | ------------- |
-| オムレツ   | 3    | 10            |
-| オムライス | 2-3  | 10            |
-| ゆでたまご | 1-2  | 10            |
-| 目玉焼き   | 1-2  | 5             |
-| チャーハン | 1    | 15            |
-| 茶碗蒸し   | 1    | 30            |
-| プリン     | 1    | 240           |
+賞味期限が近くてもいい:
+
+- 玉子スープ
+- オムレツ
+- オムライス
+- ゆでたまご
+- 目玉焼き（固）
+- チャーハン
+
+新鮮な方がいい:
+
+- 卵かけご飯
+  - 牛丼・豚丼
+- 目玉焼き（生）
+- 茶碗蒸し
+- プリン
+- アイスクリーム
 
 卵は余りがち。
 新鮮じゃなくても使えるレシピが便利。
