--- a/shared/study/勉強不要説.md
+++ b/shared/study/勉強不要説.md
@@ -15,3 +15,6 @@
 「勉強できて得することはあまりないかもですけど、できなくて困る事はいずれ沢山出てきますから...」（『秘密法人デスメイカー』）
 
 「ドイツ人は日本人の3倍休んで成果を出す」みたいな本に「は？年間休日120日と考えても3倍休んだら360日なんだが？」とパッと思えるのが算数の基礎力。
+
+現代では多くの人が「放射線は危険」とか「水銀は危険」といった常識を持っているので、学校で勉強してない人でもそれらの危険に触れる機会が自然と減っている。
+まぁ、言わば寄生虫みたいなものだけど、知識のある人が特に損しているわけでもない。
