--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -801,3 +801,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 ビジネスに求められる価値は社会貢献だが、企業のファイナンスだけに目を向けてしまうと、その製品の社会的な効用よりも儲けを見てしまう。
 
 活動としてはworkに近いけど、人相手のことなのでcareの精神が大事。
+
+自分の得点ができるだけ高くなるようにスコアアタックをする人と、周りと比べて高くなるように対戦する人では、前者のほうがリスクを取っていて、勝てば大きく勝つ。ビジネスで必要なのは前者。ただ、失敗する人も多い。
