--- a/shared/cooking/recipes/sweat/アイスクリームを作る.md
+++ b/shared/cooking/recipes/sweat/アイスクリームを作る.md
@@ -9,10 +9,17 @@
 
 1. 卵を溶き、砂糖を2-3回に分けて混ぜる
 2. 卵が白っぽくてもったりとするまで混ぜる
-3. 別のボウルで生クリームを八分立てにする
+3. ガラスのボウルで生クリームを八分立てにする
+4. 全てを混ぜる
+5. 小分けにして冷凍する
 
 https://youtube.com/watch?v=vfaL9olgd68&si=V5PmZmbVKRZv602k
 
 ## メモ
 
 ボウルごと冷凍できなくもないけど、小分けにした方が便利。凍るのも早いし、取り出しやすい。ガラスでも金属でも冷たくなりすぎて触りづらいのでプラ容器が楽。
+
+アイスクリームは生クリームの泡立てが一番の要所。口当たりが大きく変わる。
+
+アイスクリームの生クリームを泡立てすぎると食感が悪くなる。空間が大きすぎて口溶けが悪い。
+泡立てが足りないと硬くなる。
