--- a/shared/cooking/料理.md
+++ b/shared/cooking/料理.md
@@ -37,3 +37,5 @@
 ほうれん草などシュウ酸を含む食材は尿管結石の原因になる。一度煮てシュウ酸を茹で汁に移して捨てると減らせる。ビタミンも流れるけど。
 
 料理ができない人って見たことないんだけど存在するのかな。
+
+結婚式とかで良さげな料理が出てきてもポテチの方が美味いまである。人の営みなど、糖と油の前では無力なのだ…
