--- a/shared/information/gathering/情報を集める.md
+++ b/shared/information/gathering/情報を集める.md
@@ -15,3 +15,5 @@
 情報は、事前に集めるだけでなく、現場で得た情報も判断に取り込まないといけない。
 
 情報を得るということは、不要な可能性を捨てることだ。
+
+情報が足りなくても決断すべきときと、情報が揃うまで待つべきときがある。急いでないなら基本的に情報が揃うのを待っていい。
