--- a/shared/risk/ギャンブル.md
+++ b/shared/risk/ギャンブル.md
@@ -14,3 +14,5 @@
 
 常に掛け金を考慮して収支を考えないといけない。
 例えば、25万円賭けて当たれば4倍だったら、「当たれば100万円、負けたら0」と考えるのではなく、「当たれば+75万円、負けたら-25万円」と考えないといけない。
+
+持ち金を全部賭けるんじゃなくて、まず持ち金を増やす。
