--- a/shared/story/telling/キャラクターの退場.md
+++ b/shared/story/telling/キャラクターの退場.md
@@ -5,3 +5,5 @@
 ヘイトキャラはできるだけ登場を遅らせて、できるだけ早く、劇的に退場させるべき。そもそも劇的に退場させて面白みを引き出す効果がないなら出す価値もないキャラ。
 退場させる場合、殺してもいいし、拷問してもいいし、あるいは劇的な変化によって改心させてもいいし、良いところを見せてもいい。改心させる場合は比較的時間がかかるので、ヘイトキャラであっても好かれるような要素がないといけない。単純に強いとか、顔がいいとか。
 ヘイトは別に時間を掛ければ熟成されて退場時に気持ちいいというものでもない。
+
+一度捕まえた敵が脱走したり実は生存したりして何度も出てくるのはキャラの使い回し。物語としては妥協だけど、いちいちキャラを考えるのは大変。作者としては楽。
