--- a/shared/collaboration/organization/hierarchy/上司と部下.md
+++ b/shared/collaboration/organization/hierarchy/上司と部下.md
@@ -152,3 +152,5 @@ https://bufferings.hatenablog.com/entry/2023/12/23/110403
 部下が指示を聞かないなら上司が将の器じゃなかったというだけ。
 
 部下は上司でなく組織に従うべき。必要に応じて、上司を切り捨てたり諌めたりする必要がある。
+
+部下が上司に逆らったのなら上司の器が足りなかったというだけ。上司が悔い改めなければならない。
