--- a/shared/family/children/育児.md
+++ b/shared/family/children/育児.md
@@ -74,3 +74,6 @@ https://toyokeizai.net/articles/-/624086?page=2
 
 育児の大変さのアンケートでは、子どもが生まれた直後と2歳ごろが一番大変で、4歳になると楽になる、という傾向が出ている。
 https://x.com/shiroku__mama/status/1963543241292136671?s=12
+
+子どもは死にやすい。
+七五三で7歳まで成長を祝うのもそのため。
