--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -174,3 +174,7 @@ Lose-WinをLose-Loseに持ち込む。
 負けそうになって戦い方を変えるなら、初めからそのように戦っていればいい。すでに負けている。
 
 戦争は争いや競合を解決する手段の一つでしかない。
+
+戦争では勝たないと何も得られない。まずは負けないことが重要で、侵略するならさらに相手に勝つ必要がある。勝てないのに戦争しても資源を無駄に消耗するだけで終わる。
+
+戦争で必要な能力はまず守備、次に継戦、最後に攻撃。敵の攻撃を防ぎ続けるだけでも相手に継戦能力がなければ勝てる。どちらも継戦能力があるなら相手の防御を抜かないと勝てない。
