--- a/shared/war/敵を作らない.md
+++ b/shared/war/敵を作らない.md
@@ -41,3 +41,5 @@
 敵を作らないというよりは、戦線を短くする。一度に相手しないといけない敵を減らす。
 
 恨みは恐怖を克服することが多い。恨みを買わずに、恐れさせる。
+
+敵を作らないためには、相手に損をさせないこと。特に名誉や信用を傷つけないこと。ただ、その上でこちらに弱みがあるなら損しない程度に搾り取る。
