--- a/shared/discussion/tips/相談.md
+++ b/shared/discussion/tips/相談.md
@@ -54,3 +54,5 @@
 より良い意見を求めるのが相談。
 
 格下に囲まれて育つと誰かに相談したり交渉したりしない。自分で決めて、誰かに依頼したことが受け入れられなかったら切り捨てて自分でやる。
+
+教えを乞う前に、解を求めるための過程、術を自分なりに考える。それを提示してから擦り合わせる。
