--- a/shared/technique/再現性.md
+++ b/shared/technique/再現性.md
@@ -18,3 +18,5 @@ method は再現性のある手法。
 再現性のない奇跡や神秘、あるいは偶然と呼ばれるものに再現性を与えるのが科学。神の御技を人の手に堕とす。
 
 文字を綺麗に書くのは、再現性のある体のコントロールの練習になる。
+
+何かを究めるということは、術理を隅々まで理解して、再現できること。
