--- a/shared/care/responsibility/tips/自由.md
+++ b/shared/care/responsibility/tips/自由.md
@@ -98,3 +98,5 @@
 人間の本能や自然に逆らっているからこそ自由でかっこいい。たかが常識や法律なんかに逆らってもかっこよくない。自然に逆らわなければ自由とは言えない。
 
 苦しいから自殺する、気に入らないから排除する、嫌いだから助けない、みたいに自然で合理的な行動は不自由。自由とは不自然なものだ。
+
+人の自然な性に逆らってこそ自由。
