--- a/shared/collaboration/organization/組織.md
+++ b/shared/collaboration/organization/組織.md
@@ -183,3 +183,5 @@ https://diamond.jp/articles/-/49655
 組織における栄養は情報と金と人。それらを消化して、分解して、各部に届ける。
 
 行動を統一するか、目的を共有するか。
+
+組織が大きくなると目が行き届かなくなるので、政治が横行しやすい。
