--- a/shared/government/王.md
+++ b/shared/government/王.md
@@ -44,3 +44,5 @@ https://youtu.be/y0yJwfUmC-g?si=QxVNydA_1hTznSEx
 女系天皇の禁止はむしろ婿入りした王配が浮気したりして変な血が混ざらないように作られた制度で、男を猿だと思ってる。
 
 民の怒りを勝って処刑されるところまでが王の役割。フランス革命が起きるまでは王の力が強くなりすぎて役割が果たされなくなってたけど、銃ができてからはだいぶ元の役割が戻ってきた。集権には責任が伴う。
+
+王は戴かれるものであって、王になった瞬間から民の所有物である。自分の生死を決める権利すらない。
