--- a/shared/government/legal/刑罰.md
+++ b/shared/government/legal/刑罰.md
@@ -6,3 +6,5 @@
 拷問と肉刑は混同されがちだけど、拷問はあくまでも尋問。ただ、肉体的に痛めつける行為を指して他にちょうどいい言葉がないので拷問が使いやすい。
 
 ちゃんと警察が取り締まらないと私刑が増える。
+
+罪があってもなお慕われる人は処刑できない。処刑すると反乱が起きる場合もあるし、反乱にまではならなくても王の方が見放されることがある。
