--- a/shared/collaboration/organization/組織.md
+++ b/shared/collaboration/organization/組織.md
@@ -185,3 +185,5 @@ https://diamond.jp/articles/-/49655
 行動を統一するか、目的を共有するか。
 
 組織が大きくなると目が行き届かなくなるので、政治が横行しやすい。
+
+普通、非公式な組織に大きな戦力はない。そもそも公権力と拮抗するほどの力があったら表でも好き勝手できる。漫画みたいに裏稼業に強い人がいるのはフィクション。
