--- a/shared/communication/media/language/枕詞.md
+++ b/shared/communication/media/language/枕詞.md
@@ -28,3 +28,10 @@
 「説明するのは難しいけど」とか「少し長くなるけど」とか。
 
 「嫌味なこと言っていい？」みたいな枕詞を言うべきかどうか。そもそも嫌味なことを言うべきかどうか。
+
+相手にやってほしいことを明確に限定する意味もある。
+
+- 結論から先に言います。
+- 前提だけ共有します。
+- 判断は任せます。
+- 確認だけお願いします。
