--- a/shared/government/国民の弾圧.md
+++ b/shared/government/国民の弾圧.md
@@ -4,3 +4,6 @@
 そうなると、自軍の損失も大きくなる。
 
 統治者に文句を言う人たちは国のためを思っている。迫害するのではなく、彼らの主張に合った仕事を与える。例えば、難民を保護せよと言うなら、難民を保護させる。まぁ、支援するとは限らないけど。
+
+言論統制の制限も基本的には民主政治のためにある。
+自由な議論が許されないと、政治家を選ぶのに都合が悪い。
