--- a/shared/production/product/development/製品開発.md
+++ b/shared/production/product/development/製品開発.md
@@ -158,3 +158,5 @@ https://youtube.com/watch?v=HWB1j6enly8&si=vFYpXZ751PbPe60t
 https://x.com/shtrchkw/status/1976818875800191271
 
 大きな製品を作るためには、チームを率いる能力も必要になる。
+
+製品を作るだけでなく、その発明がもたらす利益を提示する。商業的な儲けや実利的な必要性。国や企業に金を出してもらう意味もある。
