--- a/shared/dance/基本ステップ.md
+++ b/shared/dance/基本ステップ.md
@@ -1,13 +1,74 @@
-基本ステップ
+ステップ以前:
 
+- 体揺らし（ノリ）
+  - 縦（アップ、ダウン）
+    - 踵
+    - 膝
+    - 腹
+    - 肩
+    - 全身
+  - 前ノリ
+  - 後ノリ
+- 屈伸（バウンス）
+  - アップ
+  - ダウン
+- スウェイ（左右）
+- 足踏み（ウォーク）
+  - その場
+  - 前後移動
+  - サイドステップ（左右移動）
+    - 一歩
+    - 四歩
+- ジャンプ
+
+単純なステップ:
+
+- ボックス（左右）
+- ターン（左右）
+- キックステップ
+- スライドステップ（すり足）
+- フォーシング
+- ランニングマン
+- クラブ
+  - オープン
+  - クローズ
+- チャールストン
+- ハッピーフィート
+- パドブレ
+
+少し複雑:
+
+- シャッフル
+- スポンジボブ
+- ロジャーラビット
+- シャムロック
+- ドラムンベース
+- ポップコーン: キック + サイド
+- ブルックリン
+- トゥループ
+- ビズマーキー: ジャンプ + パンチ
+
+足を内外に開いたり閉じたりするステップなんて言うんだろう？
+クラブは開いたり閉じたりの左右移動、チャールストンは開いたり閉じたりの前後移動に跳ね足。
+
+- https://youtu.be/87qoh-jwstE?si=Q4yCSQoWfIiu9hQW
+- https://youtu.be/WE76s6c1GGI?si=u5syt2If_1YKT2SX
+- https://youtu.be/fY8gM4k9vRw?si=v1s78xlwAadmKDAA
 - https://youtu.be/WE76s6c1GGI?si=0XBkJSCY9WEBcnLK
 - https://youtu.be/97adPgS5tjI?si=c9KtUkwrpBHkE6Tb
 
-ダンスにおけるステップの移動は、左右移動、前後移動、周回、ターンに大別できそう。
-チャールストンは前後移動、ボックスは周回。
+ダンスにおけるステップの移動は、左右移動、前後移動、ボックス、ターンに大別できそう。
+チャールストンは前後移動、クラブは左右移動。
 
 移動とは別に足の運用でまた違う。手の振りもいろいろあるけど、まずは足の運用。
 
 手の振りは足に合わせて上下とか前後とか左右とかに振るだけでもまずはなんとかなる。あと重心移動の補助にもなるし。
 
 足下にテープで着地の印をつけて練習するのもあり。
+
+慣れたら前後左右だけじゃなくて、８分割にしたり、１６分割にしたり、移動距離を広げたり狭めたり、といった応用もできる。
+
+パドブレはバレエ由来のフランス語。2歩目を1歩目と逆方向にクロスさせてサイドステップする。
+https://spotomo.com/dance/media/paddbre/571/
+
+ステップの基本は足運び。足踏みやジャンプがベースにあって、移動が加わる。
