--- a/shared/art/作品.md
+++ b/shared/art/作品.md
@@ -30,3 +30,6 @@
 「褒められるか貶されるか」
 「『特になし』が一番駄目だ」
 『かげきしょうじょ』
+
+作曲に限らず、何かを作る時はできるだけ早く完成した状態に持っていって、そこから洗練していくのがベスト。
+ものによってはそれが難しい場合もある。建物など、製造コストが高いものはもっと小さなサンプルを作って設計を進めていく場合もある。
