--- a/shared/business/ビジネスの成功.md
+++ b/shared/business/ビジネスの成功.md
@@ -37,3 +37,7 @@ Lose-Lose
 
 勝ち取る (win) のは、競争に勝つ (beat, defeat) のとはまた別。
 利益が出るなら競争には勝たなくてもいい。
+
+ビジネスは儲けというよりも規模が重要。売上1000円と100万円では、100万円の方がより大きな価値があるビジネスだと思われていて、社会的影響が大きい。同じ利率5%であったとしても後者の方が良いビジネス。
+
+ビジネスは儲けることよりも規模が大きく、長く維持できることが重要。もちろん赤字では長続きしない。悪い影響があるビジネスは潰されるので長続きしない。
