--- a/shared/technology/engineering/工業.md
+++ b/shared/technology/engineering/工業.md
@@ -18,3 +18,5 @@ engineeringはproductionやdevelopmentの中でも特に科学的な手法を用
 
 工業製品 industrial product は特に工場で作られた製品を指す。
 量産された、という意味で manufactured product と呼ぶこともある。
+
+蒸気機関やエンジンは完全に密閉されて圧力を生み出せる溶接技術と高められた圧力に耐えられる強度のある素材や溶接技術が必要。
