--- a/shared/commerce/商業.md
+++ b/shared/commerce/商業.md
@@ -99,3 +99,5 @@ https://x.com/BuzzLogicCEO/status/1813015524546342978
 
 商売の基本はリピーターを増やすこと。新しい顧客を見つけるコストは高い。同じ顧客と何度も取引した方が儲かる。
 新規顧客を雑に増やしてもリピーターにならないと一時的な収入にしかならない。新規顧客を増やすなら、同時にそれをリピーターに変える方策も必要。
+
+飲食店とか消え物の利点は、次々と新しい商品を出さなくても長く売れること。飽きられることはあっても、家電みたいに一度買うと何年も買う必要がなくなることはない。
