--- a/games/Street-Fighter/Six/起き攻め.md
+++ b/games/Street-Fighter/Six/起き攻め.md
@@ -64,3 +64,5 @@
 投げが綺麗に重なってバクステにも負けなくてシミーができる+4か+5が一番使いやすい。
 ガイルの{端}強サマー, 3HKとか。
 舞の{端}前投げ, ステップもシミーができて強いけど+3なのでバクステから4F技が確定する。
+
+後退がシミーになる起き攻めは、近づくところまで習慣としてワンセットにして困ることがほぼない。何度も反復して慣れるといい。リスクを減らしたいなら近づいた後に後退してしゃがみガードするだけ。最悪後退が足りなくて投げられてもいい。
