--- a/shared/communication/media/language/languages/english/tips/冠詞の使い分け.md
+++ b/shared/communication/media/language/languages/english/tips/冠詞の使い分け.md
@@ -1,3 +1,54 @@
+# Article
+
+冠詞というよりは、限定詞として考えた方がいい。
+英語は限定詞の種類が日本語よりも多くて、厳格でもある。
+
+監視は限定詞 (determiner) の一種。つまり、定か不定かを示す。
+
+文脈における物の役割を示し、物の性質を表す形容詞とは異なる。
+
+まず重要なのは定冠詞のtheとそれ以外を区別すること。
+
 https://youtube.com/watch?v=FC7UlFQibq8&si=BKabCKUmAWed5wYW
 
 英語の冠詞は「あれ」「それ」が近いのかも。"This is a pen." を日本語で言うと「これはあれだ、ペンだ」みたいな。日本語だとちょっと言葉に詰まった感じ。でも英語では常に冠詞をつける。”This is a…”みたいにpenが出てこない場合はaで止まる。
+
+ラテン語には冠詞がない。古英語やギリシア語にはある。また、元々はあってもなくてもよかった。
+
+theは旧情報につける。それ以外は新情報。
+日本語でも新情報を区別するには助詞で制御できなくもないが、英語ではきっちり文法として強制する。
+
+情報の新旧を区別することで、社会的連帯の基礎になる。「あなたも私も知ってますよね？」という暗黙的な意味もある。
+https://youtu.be/_3RwtmEhUkU?si=od0iAA0_hHzZCvBT
+
+まず、theをつけるかどうか。
+theがついているなら他の冠詞は必要ない。
+次にmyとかyourとかの所有を表す冠詞があって、
+
+冠詞という括りよりは、限定詞として考えた方がいい。
+
+1. 固有名詞である → 限定詞なし
+2. 一般名詞である
+   1. 旧情報である → the
+   2. 新情報である
+      1. 指示だけで対象を限定できる（その場に二つまでしかない）
+         1. こちら → this
+         2. そちら → that
+      2. 指示だけでは対象を限定できない
+         1. 所有で対象を限定できる
+            1. 自分 → my
+            2. 相手 → your
+            3. その他 → his, her, their, など
+         2. 所有で対象を限定できない
+            1. 存在しない → no
+            2. 存在する
+               1. 数量で対象を限定できる
+                  1. 単数 → a/an
+                  2. 複数 → some, a few, a little, など
+               2. 数量で対象を限定できない → 限定詞なし（sheep, people, など）
+
+sun, moon, earth, などは一般名詞なので限定詞をつける。
+sunは日光や他の銀河の恒星、moonは他の星の衛星を指す場合もあるし、earthは地面を指す場合もあって固有名詞としては扱えない。
+
+同じ名前の人が二人いて固有名詞だけで区別できない場合は、追加情報を後ろにつけて区別する場合がある。
+"John, the layer"みたいに名前に役職をつけるとか、"Paris, Texas"みたいに地名に国名をつけるとか。
