--- a/shared/communication/情報を伝える.md
+++ b/shared/communication/情報を伝える.md
@@ -1,3 +1,5 @@
 情報を渡すのがコミュニケーション。
 
 情報をあえて伝えない場合、情報の持ち主が信頼されていないとうまくいかない。今は必要ないから伝えていないと信頼するのか、信頼せずに情報を集めようとしたり勝手に推測して先回りして動いたりする。これも情報の持ち主の器の問題ではある。
+
+拳は口よりも、銃は拳よりも話を聞いてもらえる。相手に話を聞くつもりがなくても拳なら叩き込めるし、銃なら尚更だ。
