--- a/shared/life/生.md
+++ b/shared/life/生.md
@@ -101,12 +101,6 @@ achievement に慣れすぎると、生きるのも終わりにしたがる。
 
 生きるというのは、根本的に、変化を感じることだ。自分も変わっていくし、周囲も変わっていく。縁。
 
-生物学的には、以下の三つの条件が生物を定義している。
-
-1. 外界と膜で仕切られている。
-2. 代謝（物質やエネルギーの流れ）を行う。
-3. 自分の複製を作る。（再生産・生殖）
-
 生きる理由としては意味とか価値とか。まぁ、別に生きる理由はいらない。
 
 生物本来の生き方は習慣によって生きる方なので、意欲みたいな歪なものに頼って生きていると死にたくなる時もある。
@@ -147,3 +141,7 @@ https://www.youtube.com/shorts/Tieiz38zcIA
 「何の為に生きるかを捜すのも「生きる」と云う事だ。」『修羅の紋』
 
 「生まれちまったらそれが定めさ。」『昭和元禄落語心中』
+
+「お前のようにただ生きているだけの人間と同じだと思うなよ！」
+「それの何が悪い！？死んじまったら、何も出来ない！」
+『スパロボY』
