--- a/shared/music/theory/melody/音階.md
+++ b/shared/music/theory/melody/音階.md
@@ -15,7 +15,7 @@ https://www.logical-arts.jp/archives/2929
 メジャースケールは明るく、マイナースケールは暗く聞こえる。
 
 Cメジャースケールは、C（ド）を基点としてピアノの白鍵だけを全て使うのが特徴。
-ドレミファソラシドの8音。
+ドレミファソラシの7音。
 音と音の間隔で言うと、全、全、半、全、全、全、半。
 
 Aマイナースケールは、A（ラ）を基点としてピアノの白鍵だけを全て使うのが特徴。
@@ -40,3 +40,6 @@ https://youtube.com/watch?v=f3G-FDFVwp8&si=jaQ5uV7RfuKnP51N
 導音→主音の流れが曲の切れ目に使われやすい。導音で切れると中途半端な感じ。
 
 音程が上がる時と下がるときで使う音が違うスケールがある。イ短調も。
+
+全音5つ、半音2つの7音で一組になるスケールをダイアトニック（全音階）スケール、全音階を使ったコードをダイアトニックコードという。
+メジャースケールやマイナースケールも全音階の一種。
