--- a/shared/education/教養.md
+++ b/shared/education/教養.md
@@ -41,3 +41,8 @@
 これの意味がわかるのが教養。
 
 当て字でキラキラネームにするのも古代からある方法。別に新しくはない。教養がない人ほど昔からあるものを自分で発見したみたいに考える。
+
+教養がないだけで仲間に入れてもらえないことも多い。
+
+現代日本の学校であれば、流行りのテレビ番組とか、流行りの歌とか、流行りのゲームとかが教養である。
+大人になったら政治とか経済とかの話も入ってくる。
