--- a/shared/philosophy/history/西洋哲学史.md
+++ b/shared/philosophy/history/西洋哲学史.md
@@ -11,6 +11,15 @@
 カントは現象ともの自体。「解釈」の発見。イデアも認識を介したものでしかない。釈迦から2000年遅れてようやく「解釈」が発見された。物自体は信じるしかない。
 
 ニーチェは神や真理、物自体の価値の否定。善悪を生み出す「ルサンチマン」の発見。勝ち目のない強者を悪として、弱者が自己を肯定するための感覚が善。真理を追い求める哲学の終わり。最後の哲学者。力への意志。
+ニーチェ以降の哲学は反哲学。この「反」は真理や神といったものを捨てて、真理の探究という誤謬に陥った原因を探ったり、心理学と組み合わせた実利的な研究をしたりすること。
+
+## 次点
+
+1. アリストテレス
+2. デカルト
+3. ヒューム
+4. ヘーゲル
+5. ショーペンハウアー
 
 ## その他
 
@@ -23,3 +32,6 @@
 構造主義の特徴は比較によって理解するところ。
 
 「静的な面ばかりを見すぎている」と構造主義を批判的に捉えて出てきたのがポスト構造主義だけど、基礎は同じ。マイナーチェンジ。
+
+- https://www.youtube.com/watch?v=P60liWVFRTE
+- https://www.youtube.com/watch?v=N9yLjHLhIgQ
