--- a/shared/society/社交におけるコミュニケーション.md
+++ b/shared/society/社交におけるコミュニケーション.md
@@ -39,3 +39,7 @@
 信頼関係を考えた時、何を情報としてやり取りするべきか。あるいは何を意識するべきか。
 
 相手にどうしてほしいか、を知ってもらうのが大事かも。自分が相手に対してどうしたいか、も。カラオケ行こうよ、でもいいし、また誘ってね、でもいいし。
+
+コミュニケーションとしては情報の伝達が主なんだけど、人のコミュニケーションはどうしても社交が関わる。
+
+社交で最も重要なのは関係の維持。情報の伝達ではない。ただ、仕事とか情報の伝達が重要な場面で関係の維持だけを考えると、むしろ無能として関係を切られることがある。
