--- a/shared/cooking/tips/肉を柔らかくする.md
+++ b/shared/cooking/tips/肉を柔らかくする.md
@@ -4,6 +4,9 @@
 
 肉を柔らかくするなら、煮るより蒸したほうがいい。熱が入りすぎないし、水分も抜けにくい。量を作るのは難しいけど、家なら大丈夫。
 
+肉を焼いて焦がす代わりに、カラメルを加えると肉が固くならない。
+焦がすのは焦げの味をつけるためなのでカラメルでいい。
+
 ## ブライン液に漬ける
 
 ブライン液に漬けることで保水性を高めて肉を柔らかくする。
