--- a/shared/perception/modeling/同一性.md
+++ b/shared/perception/modeling/同一性.md
@@ -5,3 +5,8 @@
 完全に同じ記憶や性格を持った別の肉体が実現したら同じ人間かどうか。同一性、アイデンティティの問題。
 
 ひよこをすりつぶしたとき、失われるものは何か。
+
+https://youtube.com/watch?v=oPAV1qM7FKo&si=aYbTtsPo3DnqGGFK
+トポトジーの話。比較、同一性の判断。ゆるい同一性。
+何か二つのものを「違う」というのは難しくて、ゆるい同一性があるとその範囲では「違う」と言える。
+厳しい同一性よりもゆるい同一性の方が発生しやすい。適用できる対象が多い。
