--- a/shared/security/認可と認証の違い.md
+++ b/shared/security/認可と認証の違い.md
@@ -5,15 +5,10 @@
 認可 Authorization (AuthZ)
 認証 Authentication (AuthN)
 
-認可 → 何ができる？
-認証 → 誰？
+認証: あなたは誰？ → 知っている/知らない → 知らない人は通さない
+認可: あなたは何をしたい？ → 許可する/許可しない → 許可しないなら止める
 
-「なぜパスワードが必要か」
-というと、
-「使用する端末やアカウントを切り替えるため」だ。
-
-認証 → あなたは誰か
-認可 → あなたは何ができるか
+認証に「なぜパスワードが必要か」というと、「使用する端末やアカウントを切り替えるため」だ。
 
 マイクロサービスではとりあえずゲートウェイを置いて、表向きのトークンとは別に内部通信用のトークンを生成することが多いようだ。内部通信用のトークンは漏れないのでサービス間で共有してしまってもいい。
 https://qiita.com/unhurried/items/998a386ccbc1ad4b8e61
@@ -24,3 +19,6 @@ https://developers.freee.co.jp/entry/migrate-to-auth-microservice
 認証情報はアクセストークン以外にも考えられる。Google の認証情報は JSON ファイルだし。
 
 外部サービスにアクセスするトークンをテナントに紐づけてやれば、そのテナントの全てのユーザーが同じ外部サービスにアクセスできる。認証を解除する仕組みもあったほうがいいか。
+
+認証は「誰？」を問いかけて、「知ってる」「知らんわ」で対応を変える。知らない人は通さないか、ゲストとして通す。
+認可は「何をしてる？」を問いかけて、「いいよ」「だめよ」で対応を変える。ダメなら止める。
