--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -84,3 +84,8 @@
 声が裏返らないように高音を出す練習は続ける。
 
 地声のまま高音を出すのはサイレンのイメージ。滑らかに響きが変わらないまま高音に向かう。途中でガクッと上がったり響きが変わったりすると裏返っている。口は大きく開ける。
+
+テクニックで簡単に出せる高音は地声ではない。
+
+地声の高音はダンベル上げみたいなもので、少しずつ高い音が出せるように鍛えないと出ない。
+声帯を伸ばして、維持する筋肉が必要。高くなるほど伸ばすのも伸びたまま維持するのも大変だけど、同じ伸びなら繰り返せば楽になる。まずは一瞬だけ伸ばす練習から。一度伸ばしたら、持続時間も伸ばす。
