--- a/shared/voice/training/ボイストレーニングの環境.md
+++ b/shared/voice/training/ボイストレーニングの環境.md
@@ -11,3 +11,6 @@
 口を動かせないのと声がこもるのが欠点。ただ、口は初めから大きく開けておけばいい。むしろ顎を動かさない練習になる。発音や音程に関係ない声帯の伸縮の練習などには使える。
 
 大きな声を出せる環境でないと、声帯を張る練習ができない。強い声が出せるようにならない。
+
+カラオケやスタジオではとにかく大きく口を開けて大きな声ではっきりと歌う練習が優先。小さな声で練習するのは家でもできる。
+ただ、大きな声ではあっても柔らかい声にする。力まずに、腹から出す。
